# simple-rust-backend

./: .gitignore  Cargo.toml  Dockerfile
resources/test/: config.toml
src/: configuration.rs  go_rest_client.rs  main.rs  user_service.rs
